crates/cosmon-core/tests/compile_fail/role/verifier_cannot_acquire_trunk.stderr
error[E0599]: the method `acquire_trunk` exists for struct `TypedWorker<Verifier>`, but its trait bounds were not satisfied
 --> tests/compile_fail/role/verifier_cannot_acquire_trunk.rs:9:26
  |
9 |     let _held = verifier.acquire_trunk();
  |                          ^^^^^^^^^^^^^ method cannot be called on `TypedWorker<Verifier>` due to unsatisfied trait bounds
  |
 ::: src/role.rs
  |
  | pub enum Verifier {}
  | ----------------- doesn't satisfy `Verifier: CanWriteTrunk`
  |
  = note: the following trait bounds were not satisfied:
          `Verifier: CanWriteTrunk`
